force-app/main/default/objects/npsp__Partial_Soft_Credit__c/fields/npsp__Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>npsp__Contact_Name__c</fullName>
    <description>The full name of the Contact who gets this soft credit (read only).</description>
    <formula>HYPERLINK(&apos;/&apos; + npsp__Contact__c,npsp__Contact__r.FirstName + &apos; &apos; + npsp__Contact__r.LastName, &apos;_self&apos;)</formula>
    <inlineHelpText>Nombre completo del contacto que recibe este crédito blando (solo lectura).</inlineHelpText>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>