force-app/main/default/objects/npsp__Partial_Soft_Credit__c/fields/npsp__Contact_Role_ID__c.field-meta.xml
<CustomField>
    <fullName>npsp__Contact_Role_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The Opportunity Contact Role this soft credit applies to.</description>
    <inlineHelpText>La función del contacto en la oportunidad a la que este crédito blando se aplica.</inlineHelpText>
    <label>Contact Role ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>