force-app/main/default/objects/npsp__Partial_Soft_Credit__c/fields/npsp__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>npsp__Opportunity__c</fullName>
    <description>The Opportunity this soft credit applies to.</description>
    <inlineHelpText>La oportunidad a la que este crédito blando se aplica.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Partial Soft Credits</relationshipLabel>
    <relationshipName>Partial_Soft_Credits</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>